# pelican

./: README.md  export.Dockerfile  import.Dockerfile  job_export.py  job_import.py  pyproject.toml
pelican/: dictionary.py  jobs.py
pelican/graphql/: guppy_gql.py
