[tool.poetry]
name = "pelican"
version = "0.6.5"
description = ""
authors = ["CTDS UChicago <cdis@uchicago.edu>"]

[tool.poetry.dependencies]

python = ">=3.9.0,<3.10"

project-request-scripts = {git = "https://github.com/chicagopcdc/project_request_scripts.git", rev = "add-poetry-project"}
fastavro = "~1.8.2"
requests = "^2.32.3"
pyspark = "^3.0.1"
gen3datamodel = ">=3.2.1"
dictionaryutils = "^3.4.1"
boto3 = "^1.38.3"
sqlalchemy = ">=1.3,<2.0"
pypfb = "^0.5.30"
psycopg2-binary = ">=2.8.4"
psutil = "^5.8.0"
gen3 = "^4.2.0"
psqlgraph = "3.0.1"
datamodelutils = ">=1.1.0"
numpy = "1.24.3"
pandas = "1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.8.4"]
build-backend = "poetry.core.masonry.api"
